[gd_scene load_steps=7 format=3 uid="uid://dbp76h323kiku"]

[ext_resource type="Script" uid="uid://bedcsa1s1mptw" path="res://Interface/MissionBuilder/MissionBuilder.gd" id="1_s0yvv"]
[ext_resource type="PackedScene" uid="uid://cr1imos8jbwjb" path="res://Interface/MissionBuilder/MissionComponentSelector.tscn" id="3_we0fx"]
[ext_resource type="PackedScene" uid="uid://bsgung4h2sac" path="res://Interface/MenuCell.tscn" id="4_we0fx"]
[ext_resource type="Texture2D" uid="uid://bxw84233s7oeq" path="res://Graphics/Icons/spacebucks_symbol.png" id="5_o01fm"]
[ext_resource type="PackedScene" uid="uid://cdwtdj8vxcbl5" path="res://Interface/DynamicFrame/DynamicFrame.tscn" id="7_moilo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4v2n"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.113049, 0.113049, 0.113049, 0.462745)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0yvv")

[node name="MissionSummaryFrame" parent="." instance=ExtResource("7_moilo")]
visible = false
layout_mode = 0
offset_left = 742.0
offset_top = 107.0
offset_right = 1267.0
offset_bottom = 707.0

[node name="VBoxContainer" type="VBoxContainer" parent="MissionSummaryFrame"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="MissionSummaryFrame/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Attention Space Heroes!"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MissionSummaryFrame/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v4v2n")

[node name="DescText" type="RichTextLabel" parent="MissionSummaryFrame/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IncomingRequestsFrame" parent="HBoxContainer/VBoxContainer" instance=ExtResource("7_moilo")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/IncomingRequestsFrame"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/IncomingRequestsFrame/VBoxContainer"]
layout_mode = 2
text = "Incoming Requests"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/IncomingRequestsFrame/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IncomingRequestItems" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/IncomingRequestsFrame/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="ComponentSelectorFrame" parent="HBoxContainer/VBoxContainer" instance=ExtResource("7_moilo")]
layout_mode = 2

[node name="ComponentSelector" parent="HBoxContainer/VBoxContainer/ComponentSelectorFrame" instance=ExtResource("3_we0fx")]
layout_mode = 2

[node name="PostMission" type="Button" parent="HBoxContainer/VBoxContainer/ComponentSelectorFrame/ComponentSelector"]
layout_mode = 2
text = "Post Mission"

[node name="RewardsSummaryFrame" parent="HBoxContainer/VBoxContainer" instance=ExtResource("7_moilo")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SpaceBucksLabel" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame/VBoxContainer/HBoxContainer" instance=ExtResource("4_we0fx")]
layout_mode = 2
icon = ExtResource("5_o01fm")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReputationLabel" type="Label" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reputation"
horizontal_alignment = 1

[node name="FactionRewards" type="GridContainer" parent="HBoxContainer/VBoxContainer/RewardsSummaryFrame/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EligiblePilotsFrame" parent="HBoxContainer" instance=ExtResource("7_moilo")]
layout_mode = 2
size_flags_horizontal = 3

[node name="EligiblePilots" type="MarginContainer" parent="HBoxContainer/EligiblePilotsFrame"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/EligiblePilotsFrame/EligiblePilots"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="HBoxContainer/EligiblePilotsFrame/EligiblePilots/VBoxContainer"]
layout_mode = 2
text = "Eligible Pilots"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/EligiblePilotsFrame/EligiblePilots/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EligiblePilotsContainer" type="VBoxContainer" parent="HBoxContainer/EligiblePilotsFrame/EligiblePilots/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
